Add batch size dimension
When feeding data to a model for inference,
it usually contains a batch size dimension as first
dimension. Therefore, the result of this node
should do the expand then the following node
doesn't need to do the expand then.

Signed-off-by: Yihong Wang <yh.wang@ibm.com>

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/node": "^12.12.17",
     "shelljs": "^0.8.3",
     "tslint": "^5.20.1",
-    "typescript": "^3.5.3"
+    "typescript": "3.5.3"
   },
   "dependencies": {
     "node-wav": "0.0.2"
